[workspace]
resolver = "2"
members = [
    "libraries/amm_cli",
    "libraries/cpswap_cli",
    "libraries/clmm_cli",
    "libraries/common",
    "client",
]
exclude = ["libraries"]


[workspace.dependencies]
solana-client = "^2.1.0"
solana-sdk = "^2.1.0" 
solana-program = "^2.1.0"
solana-account-decoder = "^2.1.0"
solana-transaction-status = "^2.1.0"
anchor-client = "0.31.0"
anchor-lang = "0.31.0"
anchor-spl = { version = "0.31.0" }
spl-token = { version = "7.0.0" }
spl-associated-token-account = { version = "6.0.0" }
spl-token-2022 = { version = "6.0.0" }
spl-memo = { version = "6.0.0" } 
zeroize = "1.8.1"
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.53"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
base64 = "0.22.1"
bs58 = { version = "0.5.1" }
hex = "0.4.3"
bincode = "1.3.3"
arrayref = "0.3.6"