[package]
name = "raydium-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raydium"
path = "src/main.rs"

[features]
# default is mainnet
devnet = [
    "amm-cli/devnet",
    "clmm-cli/devnet",
    "cpswap-cli/devnet",
    "common/devnet",
]

[dependencies]
amm-cli = { path = "../libraries/amm_cli" }
clmm-cli = { path = "../libraries/clmm_cli" }
cpswap-cli = { path = "../libraries/cpswap_cli" }
common = { path = "../libraries/common" }

spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
