[package]
name = "amm-cli"
version = "0.1.0"
edition = "2021"

[features]
devnet = ["raydium_amm/devnet"]

[dependencies]
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
serum_dex = { git = "https://github.com/Vai3soh/openbook-dex.git", branch = "feature/update-solana-program-2.1.0", package= "serum_dex", default-features = false, features = ["client","program","no-entrypoint"] }
raydium_amm = { git = "https://github.com/Vai3soh/raydium-amm.git", branch = "vendor-update-openbook-dex-solana-v2", default-features = false, features = ["client","no-entrypoint"] }
common = { path = "../common" }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
anyhow = { workspace = true }
safe-transmute = "0.11.2"
arrayref = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
