[package]
name = "clmm-cli"
version = "0.1.0"
edition = "2021"

[features]
devnet = ["raydium-amm-v3/devnet"]

[dependencies]
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["memo", "metadata"] }
raydium-amm-v3 = { git = "https://github.com/Vai3soh/raydium-clmm.git", branch = "solana-v2", features = ["client","no-entrypoint"] }
common = { path = "../common" }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
spl-memo = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
anyhow = { workspace = true }
rand = "0.7.3"
bytemuck = { version = "1.7.3" }
serde_json = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }
arrayref = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
colorful = "0.2.2"
hex = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
