[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
devnet = []

[dependencies]
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["memo", "metadata"] }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
